# aqua-runtime

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/: copilot_instructions.md
docs/: architecture.md  prompt.md  runtime_lifecycle.md
examples/minimal_app/: CMakeLists.txt  main.cpp
include/aqua/application/: application.hpp
include/aqua/events/: event.hpp  event_queue.hpp
include/aqua/platform/: platform.hpp  window.hpp
include/aqua/runtime/: runtime.hpp
src/: application.cpp  event_queue.cpp  runtime.cpp
tests/: runtime_tests.cpp
